test_translator/tests/data/checkpoint_2/core/pass/92_exception_message_regex/solution.py
def parse(s):
    raise ValueError("invalid input format detected")
