test_translator/tests/data/checkpoint_2/core/fail/92_exception_message_regex/solution.py
def parse(s):
    raise ValueError("bad input")  # Doesn't match regex
